# MangaSearch

./: .gitignore  README.md  curl_tests.sh  pyproject.toml  requirements.txt  run_db.sh
data/: bulk_insert.py  simple_import.py
db/: schema.sql
db/queries/: 01_sample_insert.sql  02_useful_query_samples.sql  03_similarity_sp.sql  04_fuzzy_search_query.sql
docker/: Dockerfile.db
manga_search/: main.py
manga_search/api/: __init__.py  artist.py  author.py  cover.py  genre.py  link.py  manga.py  publisher.py  search.py  secondary_title.py  stats.py  tag.py
manga_search/infra/: database.py
manga_search/model/: metadata.py  models.py  schemas.py
manga_search/services/: crud.py
